codemp/generated/cgame/cg_newDraw.h

int CG_GetSelectedPlayer();
qhandle_t CG_StatusHandle( int task );
float CG_GetValue( int ownerDraw );
qboolean CG_OtherTeamHasFlag();
qboolean CG_YourTeamHasFlag();
qboolean CG_OwnerDrawVisible( int flags );
const char *CG_GetKillerText();
const char *CG_GetGameStatusText();
static void CG_Text_Paint_Limit( float *maxX, float x, float y, float scale, vec4_t color, const char *text, float adjust, int limit, int iMenuFont );
void CG_DrawNewTeamInfo( rectDef_t *rect, float text_x, float text_y, float scale, vec4_t color, qhandle_t shader );
void CG_DrawTeamSpectators( rectDef_t *rect, float scale, vec4_t color, qhandle_t shader );
void CG_DrawMedal( int ownerDraw, rectDef_t *rect, float scale, vec4_t color, qhandle_t shader );
void CG_OwnerDraw( float x, float y, float w, float h, float text_x, float text_y, int ownerDraw, int ownerDrawFlags, int align, float special, float scale, vec4_t color, qhandle_t shader, int textStyle, int font );
void CG_MouseEvent( int x, int y );
void CG_HideTeamMenu();
void CG_ShowTeamMenu();
void CG_EventHandling( int type );
void CG_KeyEvent( int key, qboolean down );
int CG_ClientNumFromName( const char *p );
void CG_ShowResponseHead();
void CG_RunMenuScript( char **args );
qboolean CG_DeferMenuScript( char **args );
void CG_GetTeamColor( vec4_t *color );